# function-tables

./: .gitignore  .travis.yml  README.hs  README.md  function-table.sublime-project  logic-function-tables.cabal  stack-lts-3.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack-lts-8.yaml  stack-nightly.yaml  stack.yaml
app/: Example.hs  Main.hs  Spec.hs
logic-function-tables/: README.hs  README.md  logic-function-tables.cabal  stack-lts-6.yaml  stack-nightly.yaml  stack.yaml
logic-function-tables/app/: Example.hs  Main.hs  Spec.hs
logic-function-tables/src/Data/Vector/Sized/: Quote.hs
logic-function-tables/src/UnitB/: FunctionTable.hs
logic-function-tables/src/UnitB/FunctionTable/: Spec.hs  Verifier.hs
logic-function-tables/src/UnitB/FunctionTable/Spec/: LaTeX.hs  Markdown.hs  Types.hs
src/: Lib.hs
src/UnitB/: FunctionTable.hs
src/UnitB/FunctionTable/: Spec.hs  Verifier.hs
src/UnitB/FunctionTable/Spec/: Doc.hs  LaTeX.hs  Markdown.hs  Types.hs
test/: Spec.hs
