name:                logic-function-tables
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/logic-function-tables#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Logic
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
      UnitB.FunctionTable
      UnitB.FunctionTable.Spec
      UnitB.FunctionTable.Spec.LaTeX
      UnitB.FunctionTable.Spec.MarkDown
      UnitB.FunctionTable.Spec.Types
  build-depends:       base >= 4.7 && < 5
                     , async
                     , bifunctors
                     , containers
                     , control-invariants
                     , directory
                     , either
                     , filepath
                     , generic-instances
                     , HaTeX >= 3.17
                     , literate-unitb-logic
                     , latex-function-tables
                     , lens
                     , lens-extra
                     , mtl
                     , pipes
                     , process
                     , primitive < 0.6.2
                     , semigroups
                     , syntax-error
                     , template-haskell
                     , text
                     , tex2png-hs
                     , th-printf
                     , zlib < 0.6.1.2
  default-language:    Haskell2010
  default-extensions:    DeriveFunctor, DeriveFoldable, DeriveTraversable, DeriveGeneric, GeneralizedNewtypeDeriving, FlexibleContexts, MultiParamTypeClasses, TypeSynonymInstances, FlexibleInstances

executable logic-function-tables-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bifunctors
                     , containers
                     , HaTeX
                     , latex-function-tables
                     , lens
                     , literate-unitb-logic
                     , logic-function-tables
                     , mtl
                     , process
                     , syntax-error
                     , text
                     , th-printf
  default-language:    Haskell2010

test-suite logic-function-tables-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app
  main-is:             Spec.hs
  other-modules:       Example
  build-depends:       base
                     , bifunctors
                     , containers
                     , HaTeX
                     , latex-function-tables
                     , lens
                     , literate-unitb-logic
                     , logic-function-tables
                     , mtl
                     , pipes
                     , process
                     , syntax-error
                     , text
                     , th-printf
                     , unitb-testing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/logic-function-tables
